--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-Hello World
-This comes from the Web Editor
-This comes from Atom
-Nochmal mit Atom was geändert
-3th change
-4th change
-5th change
-6th change
-7th change
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+  </body>
+</html>
