--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title>Home</title>
   </head>
   <body>
+
+    <style>
+/* folgende Definition bezieht sich auf TAG h1 */
+h1 {
+  color:#FF9F00;   /* Farbe orange */
+  font-size:28pt;  /* Größe 28pt   */
+  font-family:arial, "lucida console", sans-serif; /* Schriftart */
+}
+</style>
+
     <h1>Good Movies</h1>
  <a href="https://www.youtube.com/watch?v=Uk3_xtYLye4"> GOOD TIME </a>
 
